Buat dokumentasi API provinsi, kota dan kabupaten, dan kecamatan dengan swagger
