# app/Http/Controllers/API/CustomerController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\API\Controller;
+use Illuminate\Http\Response;
 use Illuminate\Http\Request;
 use App\Models\Customer;
 use App\Http\Resources\Customer as CustomerResource;
@@ -10,6 +11,38 @@ use App\Http\Requests\StoreCustomerRequest;
 use Illuminate\Support\Facades\Gate;
 
 class CustomerController extends Controller{
+
+    /**
+     * @OA\Get(
+     *   path="/api/customers",
+     *   operationId="getListCustomer",
+     *   tags={"Customer"},
+     *   security={
+     *    {"passport": {}},
+     *   },
+     *   summary="Mendapatkan Daftar Customer",
+     *   description="Menampilkan semua daftar customer",
+     *   @OA\Response(
+     *      response=200,
+     *      description="Successful operation",        
+     *      @OA\MediaType(
+     *          mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *      description="Unauthenticated",
+     *   ),
+     *   @OA\Response(
+     *      response=403,
+     *      description="Forbidden"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   )
+     * )
+     */
     /**
      * Display a listing of the resource.
      *
@@ -19,19 +52,88 @@ class CustomerController extends Controller{
         if(Gate::allows('isAdmin')){
             if(Customer::count() > 0){
                 $customers = Customer::with(['provinsi','kota','kecamatan','user'])->get();
-                return $this->sendResponse(CustomerResource::collection($customers), 'Berhasil menarik data customer');
-            }else
-                return $this->sendError('Data tidak ditemukan');
+                return response()->json([
+                    'success' => true,
+                    'status_code' => Response::HTTP_OK,
+                    'data' => CustomerResource::collection($customers),
+                    'message' => 'Berhasil menarik data customer'
+                ]);
+            }else{
+                return response()->json([
+                    'success' => false, 
+                    'message' => 'Data tidak ditemukan'
+                ], 404);
+            }
         }else{
             $customers = Customer::with(['provinsi','kota','kecamatan','user'])->where('user_id',$request->user()->id);
             if($customers->exists()){
-                return $this->sendResponse(CustomerResource::collection($customers->get()), 'Berhasil menarik data customer');
+                return response()->json([
+                    'success' => true,
+                    'status_code' => Response::HTTP_OK,
+                    'data' => CustomerResource::collection($customers->get()),
+                    'message' => 'Berhasil menarik data customer'
+                ]);
             }else{
-                return $this->sendError('Data tidak ditemukan');
+                return response()->json([
+                    'success' => false, 
+                    'message' => 'Data tidak ditemukan'
+                ], 404);
             }
         }
     }
 
+    /**
+     * @OA\Post(
+     * path="/api/customers",
+     * operationId="Register",
+     * tags={"Customer"},
+     * security={
+     *   {"passport": {}},
+     * },
+     * summary="Simpan Data Customer",
+     * description="Menyimpan data customer",
+     *     @OA\RequestBody(
+     *         @OA\JsonContent(),
+     *         @OA\MediaType(
+     *            mediaType="multipart/form-data",
+     *            @OA\Schema(
+     *               type="object",
+     *               required={"nama","nomor_telepon", "email", "provinsi_id", "kota_id", "kecamatan_id"},
+     *               @OA\Property(property="nama", type="string"),
+     *               @OA\Property(property="nomor_telepon", type="string"),
+     *               @OA\Property(property="email", type="string"),
+     *               @OA\Property(property="alamat", type="text")
+     *               @OA\Property(property="provinsi_id", type="string")
+     *               @OA\Property(property="kota_id", type="string")
+     *               @OA\Property(property="kecamatan_id", type="string")
+     *            ),
+     *         ),
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="Stored Successfully",
+     *          @OA\MediaType(
+     *           mediaType="application/json",
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthenticated",
+     *      ),
+     *      @OA\Response(
+     *          response=422,
+     *          description="Unprocessable Entity",
+     *      ),
+     *      @OA\Response(
+     *          response=400, 
+     *          description="Bad request"
+     *      ),
+     *      @OA\Response(
+     *          response=404, 
+     *          description="Resource Not Found"
+     *      )
+     * )
+     */
     /**
      * Store a newly created resource in storage.
      *
@@ -47,7 +149,12 @@ class CustomerController extends Controller{
         ]);
 
         $customer = Customer::create($validatedData->all());
-        return $this->sendResponse(new CustomerResource($customer), 'Berhasil membuat data customer');
+        return response()->json([
+            'success' => true,
+            'status_code' => Response::HTTP_OK,
+            'data' => new CustomerResource($customer),
+            'message' => 'Berhasil membuat data customer'
+        ]);
     }
 
     /**
